app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

/* Definições para o modo Dark */
@media (prefers-color-scheme: dark) {
  :root {
    --background-color: #0a0a0a;
    --text-color: #ededed;
  }
}

[data-theme='dark'] {
  --background-color: #ededed;
  --text-color: #0a0a0a;
}

/* Estilos base */
@layer base {
  body {
    @apply font-primary bg-primary leading-loose;
    @apply text-center xl:text-left;
    font-family: var(--font-jetbrainsMono);
    background-color: var(--background-color);
    color: var(--text-color);
  }

  /* Títulos */
  .h1 {
    @apply text-[48px] xl:text-[80px] leading-[1.1] font-semibold;
  }

  .h2 {
    @apply text-[36px] xl:text-[48px] leading-[1.1] font-semibold;
  }

  .h3 {
    @apply text-[20px] xl:text-[32px] leading-[1.1] font-semibold;
  }

  /* Textos com contorno */
  .text-outline {
    -webkit-text-stroke: 1px #ffffff;
  }

  .text-outline-hover {
    -webkit-text-stroke: 1px #4a8fff;
  }

  /* Links */
  a {
    color: var(--foreground);
    text-decoration: none;
  }

  a:hover {
    color: var(--foreground);
  }
}

